# Packer

./: .gitignore  Cargo.toml
.github/workflows/: build.yaml
src/: main.rs  mission.rs  version_2.rs  version_3.rs
tests/: packer.rs
tests/source/campaigns/test/CO30_Brett_Duplicate.Altis/: cba_settings.sqf  init.sqf  initPlayerLocal.sqf  initServer.sqf
tests/source/campaigns/test/CO30_Brett_Duplicate.Altis/edit_me/: briefing.sqf  description.ext
tests/source/contracts/CO30_Brett_AmazingMission.Stratis/edit_me/briefing/: mission.html  objectives.html  situation.html
tests/source/contracts/CO30_Brett_CommunicationsDisruption.pja308/: description.ext  mission.sqm
tests/source/contracts/CO30_Brett_CommunicationsDisruption.pja308/do_not_edit/: description.ext  script_component.hpp
tests/source/generator/freestyle.VR/: initPlayerLocal.sqf  initServer.sqf
