[package]
name = "packer"
version = "0.3.0"
edition = "2021"

[dependencies]
hemtt-pbo = { git = "https://github.com/BrettMayson/HEMTT" }
lazy_static = "1.4.0"
regex = "1.9.3"
serde_json = "1.0.104"
synixe-model = { git = "https://github.com/SynixeContractors/Crate", default-features = false, features = ["missions"] }
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.3"
